# CERM-Morse-Code-Exhibit

./: .gitignore  CERMMorse.py  Morse.py  README.md  pyproject.toml  sonar-project.properties  start.py
DataTypes/: __init__.py  datatypes.py
Docs/: CERMMorse.rst  FrozenJSON.rst  LICENSE.rst  LcdScroll.rst  Makefile  MorseAppData.rst  PathTools.rst  PlayMorse.rst  PyMorse.rst  README.rst  RPiMorseDrv.rst  conf.py  configure.rst  index.rst  make.bat  tutorial.rst
FrozenJSON/: __init__.py  frozenjson.py
LcdScroll/: __init__.py  lcdscroll.py
MorseAppData/: MorseAppData.py  __init__.py  buildfiles.py  readconfig.py  trainorder.py  workorder.py
PathTools/: __init__.py  pathtools.py
PlayMorse/: __init__.py  playmorse.py
PyMorse/: __init__.py  pymorse.py
RPMaintScripts/: CustomChar.py  reset.py  welcome.py
RPTestScripts/: CustomChar.py  Test.py  reset.py  threadtest.py
RPiMorseDrv/: RPiMorseDrvDetector.py  RPiMorseDrvRelay.py  __init__.py
RPi_AdafruitLCD_Menu/: Menu.py  Menu2.py  testMenu.py
Waxfruit_CharLCD/: Waxfruit_CharLCD.py  __init__.py
configure/: CERMMorseWx.fbp  __init__.py  configure.py  configure_evt.py  configure_gui.py  morsegui.py  morsegui.xrc
data/: config.json  morse_config_schema.json  train_orders.json  trainorder_schema.json  work_orders.json  workorder_schema.json
doc/: conf.py  index.rst
frozenjson/: __init__.py  frozenjson.py
playmorse/: __init__.py  playmorse.py
pyammorse/: __init__.py  pyammorse.py
pymorse/: __init__.py  pymorse.py
readconfig/: __init__.py  readconfig.py
requirements/: requirements.txt
(+17 files in other folders)
